fix(homepage): make the code element a block to prevent copy/paste overflow (#189)

--- a/src/css/jumbotron.module.css
+++ b/src/css/jumbotron.module.css
@@ -69,6 +69,10 @@
   overflow: initial;
 }
 
+.jumbotron__docker--code {
+  display: block;
+}
+
 .jumbotron__docker-icon {
   position: absolute;
   left: -25px;
